--- a/app/src/main/res/layout/activity_action.xml
+++ b/app/src/main/res/layout/activity_action.xml
@@ -1,47 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
     android:orientation="vertical"
-    android:scrollbarAlwaysDrawVerticalTrack="true">
+    android:background="#5fb0c9"
+    tools:context="com.cyient.iot.ambulance.ActionActivity">
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:max="100"
+        android:visibility="invisible"
+        android:backgroundTint="@android:color/white"
+        android:indeterminateTint="#1a09d6"
+        android:layout_marginTop="-7dp"
+        tools:ignore="UnusedAttribute" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/mTxtStatus"
-            android:layout_width="fill_parent"
-            android:layout_weight="0.5"
+        <Button
+            android:id="@+id/updateStatusBtn"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Status"
-            android:textColor="#000"
-            android:textSize="15sp"
-            android:padding="10dp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:background="@android:drawable/editbox_background_normal"
+            android:text="UPDATE STATUS" />
 
-        <TextView
-            android:id="@+id/mTxtExitService"
-            android:layout_width="fill_parent"
-            android:layout_weight="0.5"
-            android:padding="10dp"
+        <Button
+            android:id="@+id/exitServiceBtn"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Exit Service"
-            android:textColor="#000"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:background="@android:drawable/editbox_background_normal"
+            android:drawableEnd="@android:drawable/ic_delete"
+            android:drawableRight="@android:drawable/ic_delete"
+            android:text="EXIT SERVICE" />
     </LinearLayout>
-    <com.google.android.maps.MapView
-        android:id="@+id/mapView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:enabled="true"
-        android:clickable="true"
-        android:apiKey="AIzaSyAT7E7Zm2YTFmSLsJ9iitWdyr2p3pnIRCI"
-        />
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:orientation="vertical">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="0dp"
+        android:gravity="bottom"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/notificationBtn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/editbox_background_normal"
+                android:text="NOTIFICATION" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/editbox_background_normal"
+                android:drawableEnd="@android:drawable/ic_menu_directions"
+                android:drawableRight="@android:drawable/ic_menu_directions"
+                android:text="GET LOCATION" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/editbox_background_normal"
+                android:text="NEAR BY HOSPITAL" />
+
+            <ToggleButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:drawable/editbox_background_normal"
+                android:checked="true"
+                android:textOff="EMERGENCY"
+                android:textOn="OP" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
